--- a/.github/workflows/python_pisek_tester.yml
+++ b/.github/workflows/python_pisek_tester.yml
@@ -29,3 +29,7 @@ jobs:
       run: |
         pip install black
         black . --check
+    - name: Check typing
+      run: |
+        pip install mypy
+        mypy pisek/
