Počítat s možností překročení časového limitu
Nevyhodí výjimku, když je limit překročen. Přidán flag `--timeout`
na nastavení limitu. self-testy upraveny, aby tohle vyzkoušely.

--- a/fixtures/task_1/config
+++ b/fixtures/task_1/config
@@ -3,14 +3,13 @@
 #
 # Fill out all the information. Please, delete the TODO line after fixing it.
 #
-# Task author: Karel Tesař
-# Task implementation: Václav Volhejn
+# Task author: Kasiopea Org
 
 [task]
 name=2019-doma-H
 tests=2
 
-solutions=solve solve_4b solve_0b
+solutions=solve solve_4b solve_slow_4b solve_0b
 
 [tests]
 in_mode=online
