Přidat podporu pro tqdm

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ pisek = "pisek.__main__:main"
 
 [tool.poetry.dependencies]
 python = "^3.6"
+tqdm = "^4.50.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
