--- a/.github/workflows/python_pisek_tester.yml
+++ b/.github/workflows/python_pisek_tester.yml
@@ -13,9 +13,9 @@ jobs:
         python-version: [3.6, 3.7, 3.8]
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2 
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
+      uses: actions/setup-python@v2 # see https://docs.github.com/en/free-pro-team@latest/actions/guides/building-and-testing-python for more details
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install Pisek
