--- a/.github/workflows/python_pisek_tester.yml
+++ b/.github/workflows/python_pisek_tester.yml
@@ -21,6 +21,7 @@ jobs:
     - name: Install Pisek
       run: |
         python -m pip install --upgrade pip
+        pip install --upgrade setuptools
         pip install -e .
     - name: Test Pisek itself
       run: |
