--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,5 +16,5 @@ tqdm = "^4.50.0"
 pytest = "^5.2"
 
 [build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
+requires = ["poetry-core>=1.0.8"]
+build-backend = "poetry.core.masonry.api"
