--- a/fixtures/soucet_cms/config
+++ b/fixtures/soucet_cms/config
@@ -1,22 +1,19 @@
 # Pisek fixture
+# Source: $(Písek)/example-config for more information
 
 [task]
 name=vyberko-soucet
-tests=3
 # CMS tasks have a different judge and generator format than Kasiopea
 # (generator doesn't require seed)
 contest_type=cms
 solutions=solve solve_3b solve_slow_4b solve_0b
 
 [tests]
-in_mode=build
 # generator source file
 in_gen=gen
 
 checker=check
 
-out_format=text
-online_validity=360
 out_check=judge
 # judge source file
 out_judge=judge
