--- a/fixtures/soucet_kasiopea/config
+++ b/fixtures/soucet_kasiopea/config
@@ -30,22 +30,22 @@ file_name=H-tezky.txt
 points=6
 
 [solve]
-name=solve
+source=solve
 points=10
 subtasks=111
 
 [solve_4b]
-name=solve_4b
+source=solve_4b
 points=4
 subtasks=110
 
 [solve_slow_4b]
-name=solve_slow_4b
+source=solve_slow_4b
 points=4
 subtasks=110
 
 [solve_0b]
-name=solve_0b
+source=solve_0b
 points=0
 subtasks=100
 
