--- a/fixtures/soucet_kasiopea/config
+++ b/fixtures/soucet_kasiopea/config
@@ -7,7 +7,6 @@
 name=2019-doma-H
 tests=2
 
-solutions=solve solve_4b solve_slow_4b solve_0b
 version=2
 
 [tests]
@@ -29,22 +28,23 @@ name=Těžký vstup
 file_name=H-tezky.txt
 points=6
 
-[solve]
+[solution_solve]
 source=solve
+primary=yes
 points=10
 subtasks=111
 
-[solve_4b]
+[solution_solve_4b]
 source=solve_4b
 points=4
 subtasks=110
 
-[solve_slow_4b]
+[solution_solve_slow_4b]
 source=solve_slow_4b
 points=4
 subtasks=110
 
-[solve_0b]
+[solution_solve_0b]
 source=solve_0b
 points=0
 subtasks=100
