--- a/fixtures/guess/config
+++ b/fixtures/guess/config
@@ -9,7 +9,6 @@ tests=1
 contest_type=cms
 
 solutions_subdir=solutions/
-solutions=solve solve_0b
 version=2
 
 [tests]
@@ -38,12 +37,13 @@ solve_time_limit=2
 # Time limit (seconds) for other solutions
 sec_solve_time_limit=2
 
-[solve]
+[solution_solve]
 source=solve
+primary=yes
 points=10
 subtasks=11
 
-[solve_0b]
+[solution_solve_0b]
 source=solve_0b
 points=0
 subtasks=10
