--- a/.github/workflows/python_pisek_tester.yml
+++ b/.github/workflows/python_pisek_tester.yml
@@ -10,7 +10,7 @@ jobs:
       max-parallel: 4
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: [3.6, 3.7, 3.8]
+        python-version: ["3.10", "3.11"]
 
     steps:
     - uses: actions/checkout@v2 
@@ -29,7 +29,7 @@ jobs:
       run: |
         pip install black
         black . --check
-    - name: Check typing
-      run: |
-        pip install mypy
-        mypy pisek/
+  # - name: Check typing
+  #   run: |
+  #     pip install mypy
+  #     mypy pisek/
