--- a/fixtures/guess/config
+++ b/fixtures/guess/config
@@ -20,10 +20,13 @@ in_gen=src/gen
 # checker=check
 
 # The important line:
-solution_manager=src/manager
+solution_manager=src/stub
 
 out_check=judge
-out_judge=judge
+out_judge=src/judge
+
+[test00]
+in_globs=
 
 [test01]
 name=Subtask A
