--- a/fixtures/sum_cms/config
+++ b/fixtures/sum_cms/config
@@ -2,7 +2,7 @@
 # Source: $(Písek)/example-config for more information
 
 [task]
-name=vyberko-soucet
+name=sum-cms
 # CMS tasks have a different judge and generator format than Kasiopea
 # (generator doesn't require seed)
 contest_type=cms
