CMS: Ignore CMS libraries when typechecking

--- a/mypy.ini
+++ b/mypy.ini
@@ -2,3 +2,9 @@
 
 [mypy-tqdm.*]
 ignore_missing_imports = True
+
+[mypy-cms.*]
+ignore_missing_imports = True
+
+[mypy-sqlalchemy.*]
+ignore_missing_imports = True
