--- a/.github/workflows/python_pisek_tester.yml
+++ b/.github/workflows/python_pisek_tester.yml
@@ -32,4 +32,5 @@ jobs:
       run: |
         pip install mypy
         pip install types-PyYAML
+        pip install types-colorama
         mypy pisek/
