--- a/fixtures/sum_kasiopea/config
+++ b/fixtures/sum_kasiopea/config
@@ -52,3 +52,5 @@ subtasks=1WW
 [limits]
 # Time limit (seconds) for solutions
 solve_time_limit=1
+# Memory (address space) limit (MB) for solutions
+solve_mem_limit=128
