--- a/.github/workflows/python_pisek_tester.yml
+++ b/.github/workflows/python_pisek_tester.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Install Pisek
       run: |
         python -m pip install --upgrade pip
-        pip install -e .
+        pip install .
     - name: Test Pisek itself
       run: |
         ./self_tests.sh
