--- a/.github/workflows/python_pisek_tester.yml
+++ b/.github/workflows/python_pisek_tester.yml
@@ -23,7 +23,7 @@ jobs:
         pip install .
     - name: Test Pisek itself
       run: |
-        ./self_tests.sh
+        ./tests.sh
     - name: Check formatting
       run: |
         pip install black
