Config: Create defaults for v2 contest_types

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,7 +52,7 @@ exclude = ["fixtures"]
 
 [tool.setuptools.package-data]
 pisek = [
-    "config/global-defaults",
+    "config/*-defaults",
     "tools/*",
 ]
 
