--- a/fixtures/guess/config
+++ b/fixtures/guess/config
@@ -3,14 +3,13 @@
 
 [task]
 name=guess
-tests=1
 # CMS tasks have a different judge and generator format than Kasiopea
 # (generator doesn't require seed)
 contest_type=cms
-task_type=communication
+defaults=interactive
 
 solutions_subdir=solutions/
-version=v2
+version=v3
 
 [tests]
 in_mode=build
