ConfigHierarchy: Did you mean for config keys (Fixes #163)

--- a/.github/workflows/python_pisek_tester.yml
+++ b/.github/workflows/python_pisek_tester.yml
@@ -34,4 +34,5 @@ jobs:
         pip install types-setuptools 
         pip install types-PyYAML
         pip install types-colorama
+        pip install types-editdistance 
         mypy pisek 
