--- a/fixtures/guess/config
+++ b/fixtures/guess/config
@@ -6,7 +6,7 @@ name=guess
 # CMS tasks have a different judge and generator format than Kasiopea
 # (generator doesn't require seed)
 contest_type=cms
-defaults=interactive
+use=interactive
 
 solutions_subdir=solutions/
 version=v3
