--- a/fixtures/guess/config
+++ b/fixtures/guess/config
@@ -17,15 +17,15 @@ in_gen=src/gen
 
 # checker=check
 
-# The important line:
-stub=src/stub
-headers=src/guess.h
-
 out_check=judge
 out_judge=src/judge
 judge_type=cms
 judge_needs_in=1
 judge_needs_out=0
+
+[all_solutions]
+stub=src/stub
+headers=src/guess.h
 
 [test01]
 name=Subtask A
