--- a/fixtures/guess/config
+++ b/fixtures/guess/config
@@ -18,9 +18,7 @@ in_gen=src/gen
 
 out_check=judge
 out_judge=src/judge
-judge_type=cms
-judge_needs_in=1
-judge_needs_out=0
+judge_type=cms-communication
 
 [all_solutions]
 stub=src/stub
