--- a/fixtures/odd_stub/config
+++ b/fixtures/odd_stub/config
@@ -15,7 +15,8 @@ headers=stubs/odd.h
 
 [test01]
 points=10
-in_globs=*.in
+in_globs=random-uniform*.in
+predecessors=0
 
 [limits]
 solve_time_limit=0.2
