GitHub: Publish to PyPi

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,10 @@
 name: Pisek ⏳ CI
 
-on: [push]
+on:
+  push:
+  release:
+    types:
+      - published
 
 jobs:
   build:
@@ -48,13 +52,14 @@ jobs:
 
 
   publish:
+    if: github.event_name == 'release' && github.event.action == 'published'
     needs:
     - build
     runs-on: ubuntu-latest
 
     environment:
-      name: testpypi
-      url: https://test.pypi.org/p/pisek
+      name: pypi
+      url: https://pypi.org/p/pisek
 
     permissions:
       id-token: write
@@ -65,7 +70,5 @@ jobs:
       with:
         name: python-package-distributions
         path: dist/
-    - name: Publish to TestPyPI
+    - name: Publish to PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
-      with:
-        repository-url: https://test.pypi.org/legacy/
