Revert "GitHub: Hotfix pipeline"
This reverts commit 7061d03c6fe758facf67996945d944ec3ca8d562.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,7 +52,7 @@ jobs:
 
 
   publish:
-    if: github.event_name == 'release'
+    if: github.event_name == 'release' && github.event.action == 'published'
     needs:
     - build
     runs-on: ubuntu-latest
