--- a/fixtures/sum_cms/config
+++ b/fixtures/sum_cms/config
@@ -21,6 +21,10 @@ out_judge=judge
 judge_needs_in=1
 judge_needs_out=1
 
+[checks]
+solution_for_each_subtask=on
+all_inputs_in_last_subtask=on
+
 [test01]
 name=Subtask A
 points=2
