--- a/fixtures/guess/config
+++ b/fixtures/guess/config
@@ -28,8 +28,9 @@ points=10
 in_globs=*.in
 
 [limits]
-# Time limit (seconds) for the model solution (first listed)
+# Time limit (seconds) for the solutions
 solve_time_limit=0.2
+sec_solve_time_limit=0.2
 
 [solution_solve]
 primary=yes
