--- a/fixtures/sum_cms/config
+++ b/fixtures/sum_cms/config
@@ -45,6 +45,7 @@ predecessors=1 2
 [limits]
 # Time limit (seconds) for solutions
 solve_time_limit=0.2
+sec_solve_time_limit=0.2
 
 [solution_solve]
 source=solve
