--- a/fixtures/guess/config
+++ b/fixtures/guess/config
@@ -5,7 +5,7 @@
 name=guess
 # CMS tasks have a different judge and generator format than Kasiopea
 # (generator doesn't require seed)
-use=communication
+use=interactive
 
 version=v3
 
