--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install .
+    - name: Install task compilers
+      run: sudo apt-get install -y fpc
     - name: Test Pisek itself
       run: |
         ./tests.sh
