Build: Add extra_sources_py

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "module": "pisek.__main__",
             "console": "integratedTerminal",
             "justMyCode": true,
-            "cwd": "${workspaceFolder}/fixtures",
+            "cwd": "${workspaceFolder}/fixtures/sum_cms",
             "args": ["test"],
             "env": {"PISEK_DIRECTORY": "${workspaceFolder}/fixtures/pisek"}
         }
